--- a/Rmd/analyze.Rmd
+++ b/Rmd/analyze.Rmd
@@ -18,30 +18,6 @@ sapply(c("R/conversions.R", "R/def_pars.R", "R/init_env.R", "R/plot_results.R",
 
 ![](../img/model_new.png)
 
-### Light amplification & self-shading
-```{r lightamp, fig.width=5, fig.height=5, eval=T, include=T}
-# Import data from Marcelino et al. 2013
-md <- read.csv("data/marcelino2013_fig2a.csv")
-md$S.R <- md$density * cm2.m2 / CmolR.m2 * CmolS.cellS  # Convert units of symbiont density to CmolS/CmolR
-md$A <- md$E + 1  # Convert "E"=excess light metric of Marcelino to "A"=amplification factor
-# Plot data
-plot(md$A ~ md$S.R, pch=c(21,23,22)[factor(md$spp)], bg=c("white", "black", "gray")[factor(md$spp)], 
-     ylab="internal/external light", ylim=c(1,3.2),
-     xlab="Symbiont density (CmolS/CmolR)",
-     main="Light Amplification")
-legend("topright", legend=levels(md$spp), pch=c(21,23,22), pt.bg=c("white", "black", "gray"), inset=0.02)
-# Fit exponential decay model and plot fitted values
-mod <- nls(A ~ x + y * exp(z * S.R), data=md, start=list(x=1, y=2, z=-3))
-fit <- predict(mod, list(S.R=seq(0, 0.5, 0.01)))
-lines(fit ~ seq(0, 0.5, 0.01))
-# Get parameters of fit
-formula(mod); coef(mod)
-```
-
-### PI curve
-```{r run1_PI, cache=T, fig.height=3}
-sym_PI(pars=defpars)
-```
 
 ### Steady states values with default parameters - no feeding
 ```{r ss, cache=T, fig.width=5, fig.height=4.4}
@@ -67,7 +43,7 @@ at <- expand.grid(L=seq(from=0, to=60, length.out=21),
                   N=seq(from=0, to=4e-6, length.out=21))
 
 # Run to steady state and plot results
-ssdat <- run_steady_states(pars=replace(defpars, c("initS", "kCO2"), c(1, 10)), at=at, food=5e-6, runtime=T)
+ssdat <- run_steady_states(pars=defpars, at=at, food=5e-6, runtime=T)
 plot_steady_states(ssdat)
 ```
 With default parameters, steady state values of specific growth are higher than usually observed in corals (skeletal growth), but patterns across environments are consistent with literature. 
@@ -93,13 +69,13 @@ With some feeding (more realistic), can maintain growth with very low symbionts 
 time <- seq(1, 365, 0.5)  # if single model run, use time input
 
 # Initialize environment
-env <- init_env(time=time, L=c(20,20,2), N=c(1e-7,4e-6,2), X=c(0,0,0))
+env <- init_env(time=time, L=c(20,20,2), N=c(1e-8,4e-6,2), X=c(0,0,0))
 
 # Set parameters
 defpars <- def_pars()  # Get default parameters
 
 # Run simulation
-run <- run_coral(time=time, env=env, pars=replace(defpars, c("initS", "kCO2"), c(0.25, 10)))#
+run <- run_coral(time=time, env=env, pars=defpars)
 plot_run(run)
 ```
 
@@ -124,13 +100,29 @@ plot_run(run)
 time <- seq(1, 365, 0.5)  # if single model run, use time input
 
 # Initialize environment
-env <- init_env(time=time, L=c(5,30,2), N=c(1e-7,1e-7,0), X=c(5e-6,5e-6,0))
+env <- init_env(time=time, L=c(5,30,2), N=c(1e-7,1e-7,0), X=c(0,0,0))
 
 # Set parameters
 defpars <- def_pars()  # Get default parameters
 
 # Run simulation
-run <- run_coral(time=time, env=env, pars=replace(defpars, c("initS", "kCO2"), c(0.2, 10)))#
+run <- run_coral(time=time, env=env, pars=defpars)#
+plot_run(run)
+```
+
+### Dynamic behavior: food
+```{r varyX, eval=T, include=T, fig.width=5}
+# Set run time vector
+time <- seq(1, 365, 0.5)  # if single model run, use time input
+
+# Initialize environment
+env <- init_env(time=time, L=c(20,20,2), N=c(1e-8,1e-8,0), X=c(0,10e-6,1))
+
+# Set parameters
+defpars <- def_pars()  # Get default parameters
+
+# Run simulation
+run <- run_coral(time=time, env=env, pars=replace(defpars, c("initS", "kCO2", "nNH"), c(0.2, 10, 0.19)))#
 plot_run(run)
 ```
 
